--- a/Projects/SkinCancer/references.bib
+++ b/Projects/SkinCancer/references.bib
@@ -66,15 +66,39 @@
 }
 
 @article{Fontanillas2021,
-	title = {Disease risk scores for skin cancers},
-	author = {Fontanillas, Pierre and Alipanahi, Babak and Furlotte, Nicholas A. and Johnson, Michaela and Wilson, Catherine H. and ,  and Agee, Michelle and Bell, Robert K. and Bryc, Katarzyna and Elson, Sarah L. and Hinds, David A. and Huber, Karen E. and Kleinman, Aaron and Litterman, Nadia K. and McCreight, Jennifer C. and McIntyre, Matthew H. and Mountain, Joanna L. and Noblin, Elizabeth S. and Northover, Carrie A. M. and Sathirapongsasuti, J. Fah and Sazonova, Olga V. and Shelton, Janie F. and Shringarpure, Suyash and Tian, Chao and Tung, Joyce Y. and Vacic, Vladimir and Pitts, Steven J. and Gentleman, Robert and Auton, Adam},
-	year = {2021},
-	month = {01},
-	date = {2021-01-08},
-	journal = {Nature Communications},
-	volume = {12},
-	number = {1},
-	doi = {10.1038/s41467-020-20246-5},
-	url = {http://dx.doi.org/10.1038/s41467-020-20246-5},
-	langid = {en}
-}
+  title   = {Disease risk scores for skin cancers},
+  author  = {Fontanillas, Pierre
+             and Alipanahi, Babak
+             and Furlotte, Nicholas A.
+             and Johnson, Michaela
+             and Wilson, Catherine H.
+             and Agee, Michelle
+             and Bell, Robert K.
+             and Bryc, Katarzyna
+             and Elson, Sarah L.
+             and Hinds, David A.
+             and Huber, Karen E.
+             and Kleinman, Aaron
+             and Litterman, Nadia K.
+             and McCreight, Jennifer C.
+             and McIntyre, Matthew H.
+             and Mountain, Joanna L.
+             and Noblin, Elizabeth S.
+             and Northover, Carrie A. M.
+             and Sathirapongsasuti, J. Fah
+             and Sazonova, Olga V.
+             and Shelton, Janie F.
+             and Shringarpure, Suyash
+             and Tian, Chao
+             and Tung, Joyce Y.
+             and Vacic, Vladimir
+             and Pitts, Steven J.
+             and Gentleman, Robert
+             and Auton, Adam},
+  journal = {Nature Communications},
+  year    = {2021},
+  volume  = {12},
+  number  = {1},
+  doi     = {10.1038/s41467-020-20246-5},
+  url     = {https://doi.org/10.1038/s41467-020-20246-5}
+  }
